--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1.0"/>
     <title>Which-shroom?</title>
     <script type="text/javascript" src="scripts/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.16.5/math.min.js"></script>
+    <script type="text/javascript" src="scripts/math.min.js"></script>
     <script type="text/javascript" src="scripts/jquery.csv.min.js"></script>
     <script type="text/javascript" src="scripts/materialize.min.js"></script>
     <link href="styles/materialize.min.css" rel="stylesheet" type="text/css">
