--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                         <span class="label">Cap</span>
                     </div>
                     <div class="col s3">
-                        <a class="btn-floating btn-large dropdown-button white" data-activates="cap-shape_dropdown">
+                        <a class="dropdown-button" href="#" data-activates="cap-shape_dropdown" data-beloworigin="true">A</a>
+                        <a class="btn-floating btn-large dropdown-button white" href="#" data-activates="cap-shape_dropdown" data-beloworigin="true">
                             <img id="cap-shape_img" class="circle responsive-img" src="imgs/blank.jpg"/>
                         </a>
                         <span class="button_label">Shape</span>
@@ -60,7 +61,7 @@
                         </ul>
                     </div>
                     <div class="col s3" align="center">
-                        <a class="btn-floating btn-large dropdown-button white" data-activates="cap-surface_dropdown">
+                        <a class="btn-floating btn-large dropdown-button white" href="#" data-activates="cap-surface_dropdown" data-beloworigin="true">
                             <img id="cap-surface_img" class="circle responsive-img z-depth-2" src="imgs/blank.jpg"/>
                         </a>
                         <span class="button_label">Surface</span>
@@ -72,7 +73,7 @@
                         </ul>
                     </div>
                     <div class="col s3" align="center">
-                        <a class="btn-floating btn-large dropdown-button white" data-activates="cap-color_dropdown">
+                        <a class="btn-floating btn-large dropdown-button white" href="#" data-activates="cap-color_dropdown" data-beloworigin="true">
                             <img id="cap-color_img" class="circle responsive-img z-depth-2" src="imgs/blank.jpg"/>
                         </a>
                         <span class="button_label">Color</span>
@@ -101,7 +102,7 @@
                         <span class="label">Gills</span>
                     </div>
                     <div class="col s3 offset-s1" align="center">
-                        <a class="btn-floating btn-large dropdown-button white" data-activates="gill-size_dropdown">
+                        <a class="btn-floating btn-large dropdown-button white" href="#" data-activates="gill-size_dropdown" data-beloworigin="true">
                             <img id="gill-size_img" class="circle responsive-img z-depth-2" src="imgs/blank.jpg"/><br/>
                         </a>
                         <span class="button_label">Size</span>
@@ -111,7 +112,7 @@
                         </ul>
                     </div>
                     <div class="col s3 offset-s1" align="center">
-                        <a class="btn-floating btn-large dropdown-button white" data-activates="gill-spacing_dropdown">
+                        <a class="btn-floating btn-large dropdown-button white" href="#" data-activates="gill-spacing_dropdown" data-beloworigin="true">
                             <img id="gill-spacing_img" class="circle responsive-img z-depth-2" src="imgs/blank.jpg"/><br/>
                         </a>
                         <span class="button_label">Spacing</span>
@@ -132,7 +133,7 @@
                         <span class="label">Stalk</span>
                     </div>
                     <div class="col s3 offset-s3" align="center">
-                        <a class="btn-floating btn-large dropdown-button white" data-activates="bruising_dropdown">
+                        <a class="btn-floating btn-large dropdown-button white" href="#" data-activates="bruising_dropdown" data-beloworigin="true">
                             <img id="bruisting_img" class="circle responsive-img z-depth-2" src="imgs/blank.jpg"/><br/>
                         </a>
                         <span class="button_label">Bruises</span>
@@ -153,7 +154,7 @@
                         <span class="label">Env</span>
                     </div>
                     <div class="col s3 offset-s1" align="center">
-                        <a class="btn-floating btn-large dropdown-button white" data-activates="habitat_dropdown">
+                        <a class="btn-floating btn-large dropdown-button white" href="#" data-activates="habitat_dropdown" data-beloworigin="true">
                             <img id="habitat_img" class="circle responsive-img z-depth-2" src="imgs/blank.jpg"/><br/>
                         </a>
                         <span class="button_label">Habitat</span>
@@ -168,7 +169,7 @@
                         </ul>
                     </div>
                     <div class="col s3 offset-s1" align="center">
-                        <a class="btn-floating btn-large dropdown-button white" data-activates="population_dropdown">
+                        <a class="btn-floating btn-large dropdown-button white" href="#" data-activates="population_dropdown" data-beloworigin="true">
                             <img id="population_img" class="circle responsive-img z-depth-2" src="imgs/blank.jpg"/><br/>
                         </a>
                         <span class="button_label">Population</span>
