--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
                         <span class="label">Cap</span>
                     </div>
                     <div class="col s3">
-                        <a class="dropdown-button" href="#" data-activates="cap-shape_dropdown" data-beloworigin="true">A</a>
-                        <a class="btn-floating btn-large dropdown-button white" href="#" data-activates="cap-shape_dropdown" data-beloworigin="true">
+                        <button class="btn-floating btn-large dropdown-button white" href="#" data-activates="cap-shape_dropdown" data-beloworigin="true">
                             <img id="cap-shape_img" class="circle responsive-img" src="imgs/blank.jpg"/>
-                        </a>
+                        </button>
                         <span class="button_label">Shape</span>
                         <ul id="cap-shape_dropdown" class="dropdown-content">
                             <li><a href="#!" onclick="capshape_select(1)">Bell</a></li>
