--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
                   Edible?
                 </div>
             </div>
+            <a class="btn-floating btn-large dropdown-button white" href="#" data-activates="cap-shape_dropdown" data-beloworigin="true">
+                <img id="cap-shape_img" class="circle responsive-img" src="imgs/blank.jpg"/>
+            </a>
+            <span class="button_label">Shape</span>
+            <ul id="cap-shape_dropdown" class="dropdown-content">
+                <li><a href="#!" onclick="capshape_select(1)">Bell</a></li>
+                <li><a href="#!" onclick="capshape_select(2)">Conical</a></li>
+                <li><a href="#!" onclick="capshape_select(6)">Convex</a></li>
+                <li><a href="#!" onclick="capshape_select(3)">Flat</a></li>
+                <li><a href="#!" onclick="capshape_select(4)">Knobbed</a></li>
+                <li><a href="#!" onclick="capshape_select(5)">Sunken</a></li>
+            </ul>
         </div>
 
         <div class="carousel carousel-slider center" data-indicators="true">
@@ -46,9 +58,9 @@
                         <span class="label">Cap</span>
                     </div>
                     <div class="col s3">
-                        <button class="btn-floating btn-large dropdown-button white" href="#" data-activates="cap-shape_dropdown" data-beloworigin="true">
+                        <a class="btn-floating btn-large dropdown-button white" href="#" data-activates="cap-shape_dropdown" data-beloworigin="true">
                             <img id="cap-shape_img" class="circle responsive-img" src="imgs/blank.jpg"/>
-                        </button>
+                        </a>
                         <span class="button_label">Shape</span>
                         <ul id="cap-shape_dropdown" class="dropdown-content">
                             <li><a href="#!" onclick="capshape_select(1)">Bell</a></li>
