--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <link href="styles/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <nav class="navbar-fixed black white-text">
+    <nav class="navbar-fixed white black-text">
         <div class="row">
-            <div class="col s12">
-                <span class="title">Which-shroom?</span>
+            <div id="page_header" class="col s12">
+                <span class="title">WhichShroom?</span>
             </div>
         </div>
     </nav>
     <div class="container">
         <div class="row">
-            <div id="prediction" class="col s12 m6 offset-m3 z-depth-2">
+            <div id="prediction" class="col s12 m8 offset-m2">
                 <div class="row">
                     <span id="pred_text" class="col s4 offset-s4 label pred_display">Is it...</span>
                     <button id="prediction_button" class="col s4 offset-s4 center btn white">
