Updated to use TensorFlow.js rather than Keras.js, and fixed a UI bug.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="scripts/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="scripts/math.min.js"></script>
     <script type="text/javascript" src="scripts/materialize.min.js"></script>
-    <script src="scripts/keras.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
     <link href="styles/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet" type="text/css">
@@ -31,7 +31,7 @@
         </div>
 
         <div id="content_body" class="row"></div>
-        
+
         <div class="row">
             <div class="col s4">
                 <a class="modal-trigger" href="#disclaimer_modal">Disclaimer</a>
@@ -42,7 +42,7 @@
                 &copy; Nasanos, 2018
             </div>
         </div>
-        
+
         <div id="disclaimer_modal" class="modal">
             <div class="modal-content">
                 <span class="modal_label">Disclaimer</span>
