--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
 
         <div id="content_body" class="row"></div>
 
-        <div class="row">
-            <div class="col s4">
-                <a class="modal-trigger" href="#disclaimer_modal">Disclaimer</a>
+        <div class="row right-align">
+            <div class="col s4 offset-s8">
+                <a href="https://github.com/nasanos/WhichShroom/blob/master/README.md">About</a><br/>               
+                <a class="modal-trigger" href="#disclaimer_modal">Disclaimer</a><br/>
             </div>
         </div>
-        <div class="row">
+
+        <div class="row right-align">
             <div class="col s4 offset-s8" id="page_footer">
-                &copy; Nasanos, 2018
+                &copy; Nasanos, 2019
             </div>
-        </div>
+        </div>        
 
         <div id="disclaimer_modal" class="modal">
             <div class="modal-content">
